@@ -11,7 +11,6 @@ $cfg['file_list'] = array_merge(
 		'client/WikibaseClient.datatypes.php',
 		'client/WikibaseClient.i18n.alias.php',
 		'client/WikibaseClient.i18n.magic.php',
-		'client/WikibaseClient.php',
 		'lib/config/WikibaseLib.default.php',
 		'lib/WikibaseLib.datatypes.php',
 		'lib/WikibaseLib.entitytypes.php',
@@ -19,7 +18,6 @@ $cfg['file_list'] = array_merge(
 		'repo/config/Wikibase.searchindex.php',
 		'repo/Wikibase.i18n.alias.php',
 		'repo/Wikibase.i18n.namespaces.php',
-		'repo/Wikibase.php',
 		'repo/WikibaseRepo.datatypes.php',
 		'repo/WikibaseRepo.entitytypes.php',
 		'view/resources.php',
